Fix spacing issue Hourly forecast

--- a/src/features/Hourly/Hourly.css
+++ b/src/features/Hourly/Hourly.css
@@ -27,13 +27,14 @@
 }
 
 .hour {
-    padding: 0 1rem;
+    padding: 0 2.5rem;
     height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
     color: rgb(0, 0, 0);
+    overflow: hidden;
 }
 
 .icon {
@@ -55,6 +56,10 @@
     display: flex;
     align-items: center;
     flex-direction: column;
+}
+
+.rain {
+    padding: 1rem;
 }
 
 /*  Static icons  */
